--- a/main.ipynb
+++ b/main.ipynb
@@ -8,6 +8,34 @@
    "source": [
     "import torch"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Food Subset\n",
+    "\n",
+    "- Greek Salad\n",
+    "- Pad Thai\n",
+    "- Falafel\n",
+    "- Humus\n",
+    "- Pizza\n",
+    "- Steak\n",
+    "- Nachos\n",
+    "- Hotdog\n",
+    "- Club Sandwich\n",
+    "- Grilled Cheese Sandwich"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
