--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,11 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from ultralytics import YOLO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "image 1/1 /Users/jack/Library/CloudStorage/GoogleDrive-limjackailjk@gmail.com/My Drive/UCSD/Projects/AR-Food-Nutrition-Finder/test_images/apple_pie_1.jpeg: 224x224 churros 0.53, french_fries 0.07, paella 0.05, waffles 0.05, apple_pie 0.04, 12.2ms\n",
+      "Speed: 7.1ms preprocess, 12.2ms inference, 0.1ms postprocess per image at shape (1, 3, 224, 224)\n"
+     ]
+    }
+   ],
+   "source": [
+    "YOLO_MODEL = YOLO(\"data/Best model.pt\")\n",
+    "results = YOLO_MODEL(\"test_images/apple_pie_1.jpeg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r in results:\n",
+    "    temp = r\n",
+    "    probtop5 = r.probs.top5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5333297848701477"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.probs.top5conf.tolist()[0]"
    ]
   },
   {
